@@ -12,6 +12,8 @@
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<cucumber.version>1.2.4</cucumber.version>
 		<spring.version>4.2.2.RELEASE</spring.version>
+		<maven.test.skip>false</maven.test.skip>
+		<!-- <spring.version>3.1.0.RELEASE</spring.version> -->
 	</properties>
 
 	<repositories>
@@ -41,13 +43,13 @@
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
@@ -56,16 +58,28 @@
 
 		<!-- Hibernate -->
 		<dependency>
-			<groupId>org.hibernate.java-persistence</groupId>
-			<artifactId>jpa-api</artifactId>
-			<version>2.0-cr-1</version>
-		</dependency>
-
-		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>3.5.0-Beta-2</version>
+			<version>4.3.6.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>3.6.4.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-annotations</artifactId>
+			<version>3.5.5-Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate.common</groupId>
+			<artifactId>hibernate-commons-annotations</artifactId>
+			<version>4.0.4.Final</version>
+		</dependency>
+
+		<!-- <dependency> <groupId>org.hibernate</groupId> <artifactId>hibernate-validator</artifactId> 
+			<version>4.3.0.Final</version> </dependency> -->
 
 		<!-- Pool de conexao -->
 		<dependency>
@@ -135,7 +149,7 @@
 			<scope>test</scope>
 		</dependency>
 
-	
+
 		<dependency>
 			<groupId>hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
@@ -155,6 +169,20 @@
 					<source>1.7</source>
 					<target>1.7</target>
 					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.19</version>
+				<configuration>
+					<skipTests>${maven.test.skip}</skipTests>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<!-- <perCoreThreadCount>30</perCoreThreadCount> -->
+					<!-- <parallel>methods</parallel> -->
+					<!-- <threadCount>60</threadCount> -->
+					<redirectTestOutputToFile>false</redirectTestOutputToFile>
+					<useUnlimitedThreads>true</useUnlimitedThreads>
 				</configuration>
 			</plugin>
 		</plugins>
